--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "@azure/identity": "^4.4.0",
+    "@azure/keyvault-secrets": "^4.8.0",
+    "@elastic/elasticsearch": "^8.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "typescript": "^4.0.0"
   },
   "main": "dist/src/{index.js,functions/*.js}"
 }
